# CODEX

./: .gitignore  3_3_6_qplant_control_system_master.docx  ABACUS_LOCAL_GROUND_TRUTH_AUDIT.ps1  ADR_OCD_Background.html  ADR_OCD_Background.md  Addendum_book_master.docx  BACKBONE_POLICY.md  BUILD_LOG.md  Book_Master.md  CHANGELOG.md  CLEANUP_PLAN.md  CODEX_EXECUTION_REPORT.md  CODEX_Index.json  CODEX_Index.yaml  CONTRIBUTING.md  DORMANT_CODE.md  EMBEDDED_REPOS.md  ERROR_LOG.md  FEATURE_BRANCH_LOCKSTEP_GUIDE.md  FILE_INVENTORY.md  Full_VCR_Handover.docx  Full_VCR_Handover.html  Full_VCR_Handover.md  Full_VCR_Handover_master.docx  GITHUB_CENTERED_SOFTWARE_DELIVERY.md  GLOBAL_index.json  GLOB_POLICY.md  GLOSSARY.yaml  GOVERNANCE.md  GitHub_Reproducible_Build_Process.md  HYGIENE.md  LINEAGE_BUILD_DEPLOY_CICD.md  MANIFEST.json  OUTPUT_MANIFEST.json  PR_CONFLICT_ANALYSIS.md  Portable_Recursive_Engineering_Handover.html  README.md  SDA_Maturity_Matrix_First_Render.md  SECURITY.md  VCR_ADR_OCD_Partial.docx  (+44 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
01_requirements/: RTM.csv  requirements.json
02_design/: MASTER_FACE_SEAL_POLICY.md
03_bom/: BOM_Master.csv
04_quality/: ITP_HE_VCR.csv  PROC_DBBA_Purge.md  PROC_He_LeakTest_ISO20485.md
05_vendor/: VENDOR_COSTS.md
99_handover/: ADDENDUM_MULTI_FORMAT_OUTPUT_TRIAGE.md  BUILD_WORKFLOW.md  CH15_FEATURE_TREATMENT_RULE.md  CLEAN_HANDOVER_PACK.md  CRYO_DASHBOARD_INTEGRATION_MASTER_PLAN.md  FillMasterDiffPages.vba  MASTER_DIFF.md  MASTER_PATCH.md  PROCESS_DMAIC.md  RENAME_SBS.csv  handover_master_applied.glob.yaml
AGENTIC/: agentic_pr_followup_log.yaml  comment_response_drafts.md  proposed_fixes.yaml
DELTA_1/: README.md  branch_protection_manifest.md  governance_adr_template.md  governance_taxonomy.md  operational_ownership_matrix.md  operational_readiness_scorecard.md  release_audit_lineage.md  (+5 more)
(+1258 files in other folders)
