[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex"
version = "0.1.0"
description = "Utilities for packaging CODEX conversation archives"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CODEX Team" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
