[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex"
version = "1.3.0"
description = "Utilities for packaging CODEX conversation archives"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "CODEX Team" }]
dependencies = ["PyYAML>=6.0,<7.0", "requests>=2.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-json-report>=1.5,<2.0"]

[tool.pytest.ini_options]
addopts = "-q"
xfail_strict = true
testpaths = ["tests"]

[tool.setuptools.package-data]
"src.renderers.themes" = ["*.yaml"]

"codex.contract_governance.templates" = ["*.j2"]
